# zwalker

./: .gitignore  CONTINUED_SESSION_REPORT.md  EXTENDED_SESSION_SUMMARY.md  GAME_COVERAGE_REPORT.md  GAME_SOURCE_MATRIX.md  GITHUB_PAGES_SETUP.md  GITHUB_SETUP.md  MANIFEST.in  README.md  ROADMAP.md  STATUS.md  TESTING_STATUS.md  TODO.md  WALKTHROUGHS_STATUS.md  WIP.md  anchor_solution.json  batch_solve_output.txt  compare_outputs.py  corpus_manifest.json  curses_solution.json  failsafe_solution.json  feature.md  feature_PROGRESS.md  lists_solution.json  lists_solve_log.txt  lists_test_walkthrough.json  lostpig_solution.json  photopia_solution.json  pyproject.toml  replay_walkthrough.js  setup.py  test_aisle_walkthrough.json  todo.txt  top5_progress.json  trinity_solution.json  zork1_solution.json
docs/: ADVANCED_SOLVER.md  BOTH_BUGS_FIXED.md  BUG_FIXED_NEXT_STEPS.md  BUG_FIX_REPORT.md  CHANGELOG.md  COMPLETION_SOLVER_STATUS.md  CZECH_RESULTS.md  GAME_SOURCES.html  GAME_SOURCES.md  HINTS_ENHANCEMENT.md  HUMAN_WALKTHROUGHS_STATUS.md  OPUS_ZORK_TEST_RESULTS.md  PROGRESS_REPORT.md  PROJECT_NOTES.md  README_PAGES.md  RELEASE_CHECKLIST.md  RESTORE_STATE_BUG_FIX.md  STATUS.md  STATUS_SUMMARY.md  TEST_COMPLIANCE.md  TEST_GENERATION.md  TOP100_STATUS.json  WALKTHROUGHS.html  ZORKIE_TESTING.md  index.html  knowledge_base_schema.md  z_format_notes_from_zorkie.md
games/: download_games.py  game_list.txt  game_list_backup_20260205_080238.txt  game_list_backup_20260205_153409.txt  run_tests.py  top_150_games.txt
logs/: ballyhoo_notes.md  ballyhoo_route.txt  deadline_notes.md  deadline_route.txt  deephome_notes.md  deephome_route.txt  enchanter_notes.md  enchanter_route.txt  hhgg_notes.md  hhgg_route.txt  jewel_notes.md  jewel_route.txt  lgop_notes.md  lgop_route.txt  library_notes.md  library_route.txt  lurking_notes.md  lurking_route.txt  minizork_notes.md  minizork_route.txt  pentari_notes.md  pentari_route.txt  planetfall_notes.md  planetfall_route.txt  reverb_notes.md  reverb_route.txt  sorcerer_notes.md  sorcerer_route.txt  spellbreaker_notes.md  spellbreaker_route.txt  starcross_notes.md  starcross_route.txt  stationfall_notes.md  stationfall_route.txt  suspect_notes.md  suspect_route.txt  suspended_notes.md  suspended_route.txt  wearing_the_claw_notes.md  wearing_the_claw_route.txt  (+5 more)
routes/: amfv_zorkie_route.txt  ballyhoo_zorkie_route.txt  hollywoodhijinx_zorkie_route.txt  leathergoddesses_zorkie_route.txt  lurkinghorror_zorkie_route.txt  (+7 more)
(+639 files in other folders)
