[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zwalker"
version = "0.1.0"
description = "Automated walkthrough generator for Z-machine interactive fiction games"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "zwalker team"}
]
keywords = ["z-machine", "interactive-fiction", "if", "testing", "automation", "walkthrough"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.7.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
zwalker = "zwalker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zwalker*"]
exclude = ["tests*", "docs*", "scripts*"]
